Pi calculation and structured concurrency